fix: spacing on text for projects

--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -13,7 +13,7 @@
     display: inline;
     text-decoration: none;
     list-style: none;
-    font-size: 1.2rem;
+    font-size: 2vh;
     font-style: italic;
     margin: 0px 10px 0px;
 }
@@ -23,28 +23,26 @@
 }
 
 .subSection{
-    /* border: 1px red solid; */
     height: auto;
-    width: 75%;
+    width: 90%;
     align-items: baseline;
-    margin: 0px 100px 0px;
 }
 
 .subSection h2{
-  color: #020203;
   font-size: 5vh;
   padding: 50px 0px 20px;
   padding-left: 10%;
 }
 
 .subSection p {
-    font-size: 1.5rem;
+    font-size: 2.2vh;
     line-height: 30px;
 }
 
 .subSection img{
     justify-content: center;
-    width: 80vh;
+    width: 80vw;
+    max-width: 800px;
     margin: 30px 0px;
     border: 1.5px solid black;
 }
