--- a/src/styles/projectsPreview.module.css
+++ b/src/styles/projectsPreview.module.css
@@ -12,8 +12,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 350px;
-  height: 300px;
+  width: 300px;
+  height: 350px;
   background-color: var(--primary);
   padding: 20px;
   margin: 15px;
